src/styles.css
/* ... */
    md-list-item.md-button.md-default-theme:not([disabled]):hover,
    .md-button:not([disabled]):hover {
        background-color: transparent;
    }

    .easeIn.ng-hide-add,
    .easeIn.ng-hide-remove {
        -webkit-transition: 0.5s ease-in-out opacity;
        -moz-transition: 0.5s ease-in-out opacity;
        -ms-transition: 0.5s ease-in-out opacity;
        -o-transition: 0.5s ease-in-out opacity;
        transition: 0.5s ease-in-out opacity;
        opacity: 1;
    }

    .easeIn.ng-hide {
        -webkit-transition: 0s ease-in-out opacity;
        -moz-transition: 0s ease-in-out opacity;
        -ms-transition: 0s ease-in-out opacity;
        -o-transition: 0s ease-in-out opacity;
        transition: 0s ease-in-out opacity;
        opacity: 0;
    }

    .couponText {
        margin-left: 16px;
    }

    .md-button[disabled] {
        pointer-events: none;
    }

    .subtotalLineItem {
        padding: 8px 32px 8px 16px;
    }

    .subtotalLineItemSmall {
        font-size: 12px;
    }

    .bottomTotal {
        font-size: 16px;
        margin-top: 8px;
        margin-bottom: 16px;
        font-weight: 600;
    }

    .inputStatusIcon {
        height: 24px;
        width: 24px;
        margin-bottom: 24px !important;
        margin-right: 4px !important;
    }

    .payzenIframe {
        border: none;
        outline: none;
        width: 100%;
    }

    .small-label {
        font-size: 12px;
        padding-left: 4px;
    }

    .confirmation {
        padding: 20px 0;
        text-align: center;
    }

    .confirmation h3 {
        text-align: center;
        margin-bottom: 20px;
    }

    .confirmation .margin-top {
        margin-top: 8px;
    }

    .confirmation .booking-id {
        padding: 15px;
        display: inline-block;
        margin: 0 auto;
        width: 260px;
        opacity: 0.8;
        font-weight: bold;
    }

    body[md-theme=blue] .confirmation .booking-id {
        background: #3F51B5;
    }

    body[md-theme=blue] .confirmation .booking-id {
        background: #009688;
    }

    body[md-theme=green] .confirmation .booking-id {
        background: #4CAF50;
    }

    body[md-theme=grey] .confirmation .booking-id {
        background: #9E9E9E;
    }

    body[md-theme=blue_grey] .confirmation .booking-id {
        background: #607D8B;
    }

    body[md-theme=yellow] .confirmation .booking-id {
        background: #FFEB3B;
    }

    body[md-theme=indigo] .confirmation .booking-id {
        background: #3F51B5;
    }

    body[md-theme=red] .confirmation .booking-id {
        background: #F44336;
    }

    body[md-theme=black] .confirmation .booking-id {
        background: #000000;
    }

    @media(max-width: 600px) {
        .confirmation {
            padding: 20px;
            font-size: 13px;
        }
    }

    .no-margin {
        margin: 0 !important;
    }

    .picker-container {
        border-radius: 2px;
        background: white;
    }

    .bigDateToolbar {
        background: white !important;
        color: black !important;
    }

    .activity-dialog-container {
        display: -ms-flexbox;
        display: flex;
        -ms-flex-pack: center;
        justify-content: center;
        -ms-flex-align: center;
        align-items: center;
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        z-index: 80;
        overflow: hidden;
    }

    .activity-dialog,
    md-dialog.activity-dialog {
        max-height: 80%;
        position: relative;
        overflow: auto;
        box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2), 0px 13px 19px 2px rgba(0, 0, 0, 0.14), 0px 5px 24px 4px rgba(0, 0, 0, 0.12);
        display: -ms-flexbox;
        display: flex;
        overflow-x: hidden;
        -ms-flex-direction: column;
        flex-direction: column;
    }

    .activity-dialog,
    md-dialog md-dialog-content {
        padding: 0;
        overflow-x: hidden;
    }

    .no-margin {
        margin: 0 !important;
    }

    .leftCard {
        background: rgba(0, 0, 0, .025);
    }

    .leftCardLarge {
        border-right: 1px solid #e4e4e4 !important;
        box-shadow: 1px 0 5px 1px rgba(0, 0, 0, 0.12) !important;
        min-height: 100%;
        min-width: 420px;
        height: 100%;
    }

    .leftCardSmall {
        border-bottom: 1px solid #e4e4e4 !important;
        box-shadow: 0 1px 5px rgba(0, 0, 0, 0.08) !important;
    }

    .rightCardLarge {
        /* height: 100%;
        min-height: 100%; */
        min-width: 420px;
        display: block;
    }

    .addOnQuantityText {
        border: none;
        width: 40px;
        font-weight: 500;
        text-align: center;
        font-size: 16px;
        margin-right: -8px;
        outline: none;
        background: transparent;
    }

    .activityPaymentSummaryCard {
        margin-bottom: 0 !important;
        margin-top: 0 !important;
        margin-right: 0;
        margin-left: 0;
        background: none;
        box-shadow: none;
        position: relative;
    }

    .activityCardForm {
        margin: 0 16px 0 16px;
    }

    .detailsForm {
        padding-left: 16px;
        padding-right: 16px;
    }

    .listItemInputContainer {
        margin: 24px 16px !important;
    }

